syntax = "proto3";

package rivet.backend.pkg.job_run.msg.create;

import "proto/common.proto";
import "proto/backend/job.proto";

message Parameter {
	string key = 1;
	string value = 2;
}

/// name = "msg-job-run-create"
/// parameters = [
/// 	{ name = "run_id" },
/// ]
message Message {
	reserved 2, 5, 7;

	rivet.common.Uuid run_id = 1;
	rivet.common.Uuid region_id = 3;
	repeated Parameter parameters = 4;
	string job_spec_json = 8;
	repeated rivet.backend.job.ProxiedPortConfig proxied_ports = 6;
}

